force-app/main/default/objects/Sales_Performance_Rep_Master_Name__c/Sales_Performance_Rep_Master_Name__c.object-meta.xml
<CustomObject>
    <label>Sales Performance Rep Master Name</label>
    <nameField>
        <label>Sales Performance Rep Master Name Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Performance Rep Master Name</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>