force-app/main/default/objects/Sales_Performance_Rep_Master_Name__c/fields/Classification__c.field-meta.xml
<CustomField>
    <fullName>Classification__c</fullName>
    <label>Sales Rep Classification</label>
    <length>25</length>
    <type>Text</type>
</CustomField>