force-app/main/default/objects/Sales_Performance_Rep_Master_Name__c/fields/Emp_Active__c.field-meta.xml
<CustomField>
    <fullName>Emp_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Emp Active</label>
    <type>Checkbox</type>
</CustomField>