force-app/main/default/objects/Sales_Performance_Rep_Master_Name__c/fields/Emp_Job_Code__c.field-meta.xml
<CustomField>
    <fullName>Emp_Job_Code__c</fullName>
    <label>Emp Job Code</label>
    <length>225</length>
    <type>Text</type>
</CustomField>