force-app/main/default/objects/Sales_Performance_Rep_Master_Name__c/fields/Emp_Network_Id__c.field-meta.xml
<CustomField>
    <fullName>Emp_Network_Id__c</fullName>
    <label>Emp Network Id</label>
    <length>225</length>
    <type>Text</type>
</CustomField>