force-app/main/default/objects/Sales_Performance_Rep_Master_Name__c/fields/Emp_Orig_Hire_Date__c.field-meta.xml
<CustomField>
    <fullName>Emp_Orig_Hire_Date__c</fullName>
    <label>Emp Orig Hire Date</label>
    <type>Date</type>
</CustomField>