force-app/main/default/objects/Sales_Performance_Rep_Master_Name__c/fields/Emp_Term_Date__c.field-meta.xml
<CustomField>
    <fullName>Emp_Term_Date__c</fullName>
    <label>Emp Term Date</label>
    <type>Date</type>
</CustomField>