force-app/main/default/objects/Sales_Performance_Rep_Master_Name__c/fields/Loc_Cd_Status__c.field-meta.xml
<CustomField>
    <fullName>Loc_Cd_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Division Active</label>
    <type>Checkbox</type>
</CustomField>