force-app/main/default/objects/Sales_Performance_Rep_Master_Name__c/fields/Manager_Name__c.field-meta.xml
<CustomField>
    <fullName>Manager_Name__c</fullName>
    <label>Manager Name</label>
    <length>225</length>
    <type>Text</type>
</CustomField>