force-app/main/default/objects/Sales_Performance_Rep_Master_Name__c/fields/Mgr_Emp_ID__c.field-meta.xml
<CustomField>
    <fullName>Mgr_Emp_ID__c</fullName>
    <label>Mgr Emp ID#</label>
    <length>225</length>
    <type>Text</type>
</CustomField>