force-app/main/default/objects/Sales_Performance_Rep_Master_Name__c/fields/Rep_Cd__c.field-meta.xml
<CustomField>
    <fullName>Rep_Cd__c</fullName>
    <externalId>true</externalId>
    <label>Rep Cd</label>
    <length>80</length>
    <type>Text</type>
</CustomField>