force-app/main/default/objects/Sales_Performance_Rep_Master_Name__c/fields/Rep_Cd_Div_Name__c.field-meta.xml
<CustomField>
    <fullName>Rep_Cd_Div_Name__c</fullName>
    <label>Rep Cd Div Name</label>
    <length>225</length>
    <type>Text</type>
</CustomField>