force-app/main/default/objects/Sales_Performance_Rep_Master_Name__c/fields/Rep_Cd_Segment__c.field-meta.xml
<CustomField>
    <fullName>Rep_Cd_Segment__c</fullName>
    <label>Sales Rep Segment</label>
    <length>25</length>
    <type>Text</type>
</CustomField>