force-app/main/default/objects/Sales_Performance_Rep_Master_Name__c/fields/Rep_Org__c.field-meta.xml
<CustomField>
    <fullName>Rep_Org__c</fullName>
    <label>Rep Org</label>
    <length>225</length>
    <type>Text</type>
</CustomField>