force-app/main/default/objects/Sales_Performance_Rep_Master_Name__c/fields/Sales_Perform_EmpNumber__c.field-meta.xml
<CustomField>
    <fullName>Sales_Perform_EmpNumber__c</fullName>
    <label>Emp ID#</label>
    <length>225</length>
    <type>Text</type>
</CustomField>