force-app/main/default/objects/Sales_Performance_Rep_Master_Name__c/fields/Sales_Rep_Type__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_Type__c</fullName>
    <label>Sales Rep Type</label>
    <length>25</length>
    <type>Text</type>
</CustomField>